...
    private var trailingToolbarContent: some ToolbarContent {
        ToolbarItem(placement: .navigationBarTrailing) {
            Button {
                viewModel.prepareForAdd()
            } label: {
                Image(systemName: "plus")
                    .accessibilityLabel("Neuen Namen hinzufügen")
            }
        }
    }
}

#Preview {
...
